TAG:  no tag
DATE: 12/17/2003
STAFF: lec
RELEASE: A
CHANGES:
a) never added TR 5294 (HMD_SymbolDiffs) reports to CVS

TAG:  qcreports_db-20-0-24
DATE: 12/10/2003
STAFF: dbm
RELEASE: A
CHANGES:
a) Include clone loader reports

TAG:  qcreports_db-20-0-23
DATE: 12/09/2003
STAFF: lec
RELEASE: A
CHANGES:
a) TR 5391; ALL_Progress.sql

TAG:  no tag
DATE: 12/01/2003
STAFF: lec
RELEASE: A
CHANGES:
a) TR 5359; MRK_NomenNotInformative2.sql

TAG:  no tag
DATE: 11/25/2003
STAFF: lec
RELEASE: A
CHANGES:
a) SEQ_GenBank.py ; removed newlines from accids

TAG:  qcreports_db-20-0-22
TAG:  qcreports_db-20-0-21
DATE: 11/20/2003
STAFF: lec
RELEASE: A
CHANGES:
a) TR 5333; GXD_MechDev.sql, GXD_GeneExprPatterns.sql,
   GXD_DevBiol.sql, GXD_Development.sql
b) TR 5294; HMD_SymbolDiffs1.sql, HMD_SymbolDiffs2.sql, MRK_NomenNotInformative.sql
TAG:  no tag
DATE: 11/06/2003
STAFF: lec
RELEASE: A
CHANGES:
a) NOMEN_pending.py - convert from "-pending" to Marker Status "interim"
b) VOC_InvalidInferred.py - new for GO Annoations (TR 5311)

TAG:  no tag
DATE: 11/05/2003
STAFF: lec
RELEASE: A
CHANGES:
a) TR 5264 - GXD_MechDev.sql, GXD_GeneExprPatterns.sql
b) MGI_InvalidAge.sql

TAG:  qcreports_db-20-0-20
DATE: 10/31/2003
STAFF: lec
RELEASE: A
CHANGES:
a) TR 5268 - MRK_DashPending.sql (now MRK_InterimByRef.sql, MRK_InterimByDate.sql)

TAG:  qcreports_db-20-0-19
TAG:  qcreports_db-20-0-18
DATE: 10/30/2003
STAFF: lec
RELEASE: A
CHANGES:
a) GXD_KnockInGene.sql fixed
b) MRK_NomenTransgene.py

TAG:  qcreports_db-20-0-17
DATE: 10/28/2003
STAFF: lec
RELEASE: A
CHANGES:
a) MRK_NomenRat.sql; change per TR 4342 (RGD/LocusLink)

TAG:  qcreports_db-20-0-16
DATE: 10/28/2003
STAFF: lec
RELEASE: A
CHANGES:
a) TR 5235; ALL_Progress.sql

TAG:  qcreports_db-20-0-15
TAG:  qcreports_db-20-0-14
TAG:  qcreports_db-20-0-13
DATE: 10/27/2003
STAFF: lec
RELEASE: A
CHANGES:
a) removed link to RATMAP from Data Loads section
b) added description to MLD_Chromosome.sql

TAG:  qcreports_db-20-0-12
DATE: 10/02/2003
STAFF: lec