@@ -25,16 +25,7 @@ else
 endif
 end
 
-foreach i ($QCNOMEN/*.sql)
-reportisql.csh $i $QCREPORTOUTPUTDIR/`basename $i`.rpt $DSQUERY $NOMEN
-end
-
 cd $QCMGD
-foreach i (*.py)
-$i
-end
-
-cd $QCNOMEN
 foreach i (*.py)
 $i
 end
