@@ -1,3 +1,10 @@
+TAG:  qcreports_db-21-0-0
+DATE: 12/18/2003
+STAFF: lec
+RELEASE: A
+CHANGES:
+a) TR 5327; converted NOMEN reports
+
 TAG:  no tag
 DATE: 12/17/2003
 STAFF: lec
